@@ -1,8 +1,9 @@
-
+import com.typesafe.sbt.SbtMultiJvm.multiJvmSettings
+import com.typesafe.sbt.SbtMultiJvm.MultiJvmKeys.MultiJvm
 import Dependencies._
-import JobServerRelease._
 
-transitiveClassifiers in Global := Seq(Artifact.SourceClassifier)
+updateOptions := updateOptions.value.withCachedResolution(true)
+Global / transitiveClassifiers := Seq(Artifact.SourceClassifier)
 lazy val dirSettings = Seq()
 
 lazy val akkaApp = Project(id = "akka-app", base = file("akka-app"))
@@ -15,27 +16,32 @@ lazy val akkaApp = Project(id = "akka-app", base = file("akka-app"))
 lazy val jobServer = Project(id = "job-server", base = file("job-server"))
   .settings(commonSettings)
   .settings(revolverSettings)
+  .settings(multiJvmSettings: _*)
   .settings(assembly := null.asInstanceOf[File])
   .settings(
     description := "Spark as a Service: a RESTful job server for Apache Spark",
-    libraryDependencies ++= sparkDeps ++ slickDeps ++ cassandraDeps ++ securityDeps ++ coreTestDeps,
-    test in Test <<= (test in Test).dependsOn(packageBin in Compile in jobServerTestJar)
-      .dependsOn(clean in Compile in jobServerTestJar)
-      .dependsOn(buildPython in jobServerPython)
-      .dependsOn(clean in Compile in jobServerPython),
-    testOnly in Test <<= (testOnly in Test).dependsOn(packageBin in Compile in jobServerTestJar)
-      .dependsOn(clean in Compile in jobServerTestJar)
-      .dependsOn(buildPython in jobServerPython)
-      .dependsOn(clean in Compile in jobServerPython),
-    console in Compile <<= Defaults.consoleTask(fullClasspath in Compile, console in Compile),
-    fullClasspath in Compile <<= (fullClasspath in Compile).map { classpath =>
+    libraryDependencies ++= sparkDeps ++ slickDeps ++ cassandraDeps ++
+    securityDeps ++ coreTestDeps ++ zookeeperDeps ++ miscTestDeps ++ keycloakDeps,
+    Test / test := (Test / test ).dependsOn(jobServerTestJar / Compile / packageBin)
+      .dependsOn(jobServerTestJar / Compile / clean)
+      .dependsOn(jobServerPython / buildPython)
+      .dependsOn(jobServerPython / Compile / clean)
+      .value,
+    Test / testOnly := (Test / testOnly).dependsOn(jobServerTestJar / Compile / packageBin)
+      .dependsOn(jobServerTestJar / Compile / clean)
+      .dependsOn(jobServerPython / buildPython)
+      .dependsOn(jobServerPython / Compile / clean)
+      .evaluated,
+    Compile / console := Defaults.consoleTask(Compile / fullClasspath, Compile / console).value,
+    Compile / fullClasspath := (Compile / fullClasspath).map { classpath =>
       extraJarPaths ++ classpath
-    },
-    fork in Test := true
+    }.value,
+    Test / fork := true
   )
   .settings(publishSettings)
   .dependsOn(akkaApp, jobServerApi)
   .disablePlugins(SbtScalariform)
+  .configs(MultiJvm)
 
 lazy val jobServerTestJar = Project(id = "job-server-tests", base = file("job-server-tests"))
   .settings(commonSettings)
@@ -55,18 +61,20 @@ lazy val jobServerExtras = Project(id = "job-server-extras", base = file("job-se
   .settings(commonSettings)
   .settings(jobServerExtrasSettings)
   .settings(
-    test in Test <<= (test in Test)
-      .dependsOn(packageBin in Compile in jobServerTestJar)
-      .dependsOn(clean in Compile in jobServerTestJar)
-      .dependsOn(buildPython in jobServerPython)
-      .dependsOn(buildPyExamples in jobServerPython)
-      .dependsOn(clean in Compile in jobServerPython),
-    testOnly in Test <<= (testOnly in Test)
-      .dependsOn(packageBin in Compile in jobServerTestJar)
-      .dependsOn(clean in Compile in jobServerTestJar)
-      .dependsOn(buildPython in jobServerPython)
-      .dependsOn(buildPyExamples in jobServerPython)
-      .dependsOn(clean in Compile in jobServerPython)
+    Test / test := (Test / test )
+      .dependsOn(jobServerTestJar / Compile / packageBin)
+      .dependsOn(jobServerTestJar / Compile / clean)
+      .dependsOn(jobServerPython / buildPython)
+      .dependsOn(jobServerPython / buildPyExamples)
+      .dependsOn(jobServerPython / Compile / clean)
+      .value,
+    Test / testOnly := (Test / testOnly)
+      .dependsOn(jobServerTestJar / Compile / packageBin)
+      .dependsOn(jobServerTestJar / Compile / clean)
+      .dependsOn(jobServerPython / buildPython)
+      .dependsOn(jobServerPython / buildPyExamples)
+      .dependsOn(jobServerPython / Compile / clean)
+      .evaluated
   )
   .dependsOn(jobServerApi, jobServer % "compile->compile; test->test")
   .disablePlugins(SbtScalariform)
@@ -77,9 +85,13 @@ lazy val jobServerPython = Project(id = "job-server-python", base = file("job-se
   .dependsOn(jobServerApi, akkaApp % "test")
   .disablePlugins(SbtScalariform)
 
+lazy val jobserverIntegrationTests = Project(id = "job-server-integration-tests", base = file("job-server-integration-tests"))
+  .settings(commonSettings)
+  .settings(jobserverIntegrationTestsSettings)
+
 lazy val root = Project(id = "root", base = file("."))
   .settings(commonSettings)
-  .settings(ourReleaseSettings)
+  .settings(Release.settings)
   .settings(noPublishSettings)
   .settings(rootSettings)
   .settings(dockerSettings)
@@ -90,29 +102,34 @@ lazy val root = Project(id = "root", base = file("."))
 lazy val jobServerExtrasSettings = revolverSettings ++ Assembly.settings ++ publishSettings ++ Seq(
   libraryDependencies ++= sparkExtraDeps,
   // Extras packages up its own jar for testing itself
-  test in Test <<= (test in Test).dependsOn(packageBin in Compile),
-  fork in Test := true,
-  parallelExecution in Test := false,
+  Test / test := (Test / test).dependsOn(Compile / packageBin).value,
+  Test / fork := true,
+  Test / parallelExecution := false,
   // Temporarily disable test for assembly builds so folks can package and get started.  Some tests
   // are flaky in extras esp involving paths.
-  test in assembly := {},
+  assembly / test  := {},
   exportJars := true
 )
 
 lazy val jobServerApiSettings = Seq(libraryDependencies ++= sparkDeps ++ sparkExtraDeps)
 
 lazy val testPython = taskKey[Unit]("Launch a sub process to run the Python tests")
-lazy val buildPython = taskKey[Unit]("Build the python side of python support into an egg")
-lazy val buildPyExamples = taskKey[Unit]("Build the examples of python jobs into an egg")
+lazy val buildPython = taskKey[Unit]("Build the python side of python support into a wheel and egg")
+lazy val buildPyExamples = taskKey[Unit]("Build the examples of python jobs into a wheel and egg")
 
 lazy val jobServerPythonSettings = revolverSettings ++ Assembly.settings ++ publishSettings ++ Seq(
   libraryDependencies ++= sparkPythonDeps,
-  fork in Test := true,
-  cancelable in Test := true,
+  Test / fork := true,
+  Test / cancelable := true,
   testPython := PythonTasks.testPythonTask(baseDirectory.value),
   buildPython := PythonTasks.buildPythonTask(baseDirectory.value, version.value),
   buildPyExamples := PythonTasks.buildExamplesTask(baseDirectory.value, version.value),
-  assembly <<= assembly.dependsOn(buildPython)
+  assembly := assembly.dependsOn(buildPython).value
+)
+
+lazy val jobserverIntegrationTestsSettings = Seq(
+  libraryDependencies ++= integrationTestDeps,
+  Compile / mainClass := Some("spark.jobserver.integrationtests.IntegrationTests"),
 )
 
 lazy val jobServerTestJarSettings = Seq(
@@ -124,85 +141,53 @@ lazy val jobServerTestJarSettings = Seq(
 lazy val noPublishSettings = Seq(
   publishTo := Some(Resolver.file("Unused repo", file("target/unusedrepo"))),
   publishArtifact := false,
-  publish := {}
+  publish := {},
+  publish / skip := true
 )
 
 lazy val dockerSettings = Seq(
   // Make the docker task depend on the assembly task, which generates a fat JAR file
-  docker <<= (docker dependsOn (assembly in jobServerExtras)),
-  dockerfile in docker := {
-    val artifact = (assemblyOutputPath in assembly in jobServerExtras).value
+  docker := docker.dependsOn(jobServerExtras / assembly).value,
+  docker / dockerfile := {
+    val artifact = (jobServerExtras / assembly / assemblyOutputPath).value
     val artifactTargetPath = s"/app/${artifact.name}"
-
-    val sparkBuild = s"spark-${Versions.spark}"
-    val sparkBuildCmd = scalaBinaryVersion.value match {
-      case "2.11" =>
-        Versions.spark match {
-          case s if s.startsWith("1") => {"./make-distribution.sh -Dscala-2.11 -Phadoop-2.7 -Phive"}
-          case _ => {"./dev/make-distribution.sh -Dscala-2.11 -Phadoop-2.7 -Phive"}
-        }
-      case other => throw new RuntimeException(s"Scala version $other is not supported!")
-    }
-
     new sbtdocker.mutable.Dockerfile {
       from(s"openjdk:${Versions.java}")
       // Dockerfile best practices: https://docs.docker.com/articles/dockerfile_best-practices/
       expose(8090)
       expose(9999) // for JMX
-      env("MESOS_VERSION", Versions.mesos)
+      env("JOBSERVER_MEMORY", "1G")
+      env("SPARK_HOME", "/spark")
+      env("HADOOP_VERSION", Versions.hadoop.slice(0,3))
+      env("SPARK_VERSION", Versions.spark)
+      env("SCALA_VERSION", scalaBinaryVersion.value)
       runRaw(
-        """echo "deb http://repos.mesosphere.io/ubuntu/ trusty main" > /etc/apt/sources.list.d/mesosphere.list && \
-                apt-key adv --keyserver keyserver.ubuntu.com --recv E56151BF && \
-                apt-get -y update && \
-                apt-get -y install mesos=${MESOS_VERSION} && \
-                apt-get clean
+        """wget --no-verbose http://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz && \
+        tar -xvzf spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz && \
+        mv spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION} ${SPARK_HOME} && \
+        rm spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz
         """)
-      env("MAVEN_VERSION","3.3.9")
-      runRaw(
-        """mkdir -p /usr/share/maven /usr/share/maven/ref \
-          && curl -fsSL http://apache.osuosl.org/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz \
-          | tar -xzC /usr/share/maven --strip-components=1 \
-          && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
-        """)
-      env("MAVEN_HOME","/usr/share/maven")
-      env("MAVEN_CONFIG", "/.m2")
-
       copy(artifact, artifactTargetPath)
       copy(baseDirectory(_ / "bin" / "server_start.sh").value, file("app/server_start.sh"))
       copy(baseDirectory(_ / "bin" / "server_stop.sh").value, file("app/server_stop.sh"))
-      copy(baseDirectory(_ / "bin" / "manager_start.sh").value, file("app/manager_start.sh"))
       copy(baseDirectory(_ / "bin" / "setenv.sh").value, file("app/setenv.sh"))
       copy(baseDirectory(_ / "config" / "log4j-stdout.properties").value, file("app/log4j-server.properties"))
       copy(baseDirectory(_ / "config" / "docker.conf").value, file("app/docker.conf"))
       copy(baseDirectory(_ / "config" / "docker.sh").value, file("app/settings.sh"))
-      // Including envs in Dockerfile makes it easy to override from docker command
-      env("JOBSERVER_MEMORY", "1G")
-      env("SPARK_HOME", "/spark")
+
       // Use a volume to persist database between container invocations
       run("mkdir", "-p", "/database")
-      runRaw(
-        s"""
-           |wget http://d3kbcqa49mib13.cloudfront.net/$sparkBuild.tgz && \\
-           |tar -xvf $sparkBuild.tgz && \\
-           |cd $sparkBuild && \\
-           |$sparkBuildCmd && \\
-           |cd .. && \\
-           |mv $sparkBuild/dist /spark && \\
-           |rm $sparkBuild.tgz && \\
-           |rm -r $sparkBuild
-        """.stripMargin.trim
-      )
       volume("/database")
       entryPoint("app/server_start.sh")
     }
   },
-  imageNames in docker := Seq(
-    sbtdocker.ImageName(namespace = Some("velvia"),
+   docker / imageNames := Seq(
+    sbtdocker.ImageName(namespace = Some("sparkjobserver"),
       repository = "spark-jobserver",
       tag = Some(
         s"${version.value}" +
-          s".mesos-${Versions.mesos.split('-')(0)}" +
           s".spark-${Versions.spark}" +
+          s".hadoop-${Versions.hadoop}" +
           s".scala-${scalaBinaryVersion.value}" +
           s".jdk-${Versions.java}")
     )
@@ -211,7 +196,7 @@ lazy val dockerSettings = Seq(
 
 lazy val rootSettings = Seq(
   // Must run Spark tests sequentially because they compete for port 4040!
-  parallelExecution in Test := false,
+  Test / parallelExecution := false,
   publishArtifact := false,
   concurrentRestrictions := Seq(
     Tags.limit(Tags.CPU, java.lang.Runtime.getRuntime.availableProcessors()),
@@ -222,13 +207,12 @@ lazy val rootSettings = Seq(
 )
 
 lazy val revolverSettings = Seq(
-  javaOptions in reStart += jobServerLogging,
+  reStart / javaOptions += jobServerLogging,
   // Give job server a bit more PermGen since it does classloading
-  javaOptions in reStart += "-XX:MaxPermSize=256m",
-  javaOptions in reStart += "-Djava.security.krb5.realm= -Djava.security.krb5.kdc=",
+  reStart / javaOptions += "-Djava.security.krb5.realm= -Djava.security.krb5.kdc=",
   // This lets us add Spark back to the classpath without assembly barfing
-  fullClasspath in reStart := (fullClasspath in Compile).value,
-  mainClass in reStart := Some("spark.jobserver.JobServer")
+  reStart / fullClasspath := (Compile / fullClasspath).value,
+  reStart / mainClass := Some("spark.jobserver.JobServer")
 )
 
 // To add an extra jar to the classpath when doing "re-start" for quick development, set the
@@ -240,16 +224,18 @@ lazy val extraJarPaths = Option(System.getenv("EXTRA_JAR"))
 // Create a default Scala style task to run with compiles
 lazy val runScalaStyle = taskKey[Unit]("testScalaStyle")
 
-lazy val commonSettings = Defaults.coreDefaultSettings ++ dirSettings ++ implicitlySettings ++ Seq(
+lazy val commonSettings = Defaults.coreDefaultSettings ++ dirSettings ++ Seq(
   organization := "spark.jobserver",
   crossPaths   := true,
-  scalaVersion := sys.env.getOrElse("SCALA_VERSION", "2.11.8"),
+  crossScalaVersions := Seq("2.11.12", "2.12.12"),
+  releaseIgnoreUntrackedFiles := true,
+  scalaVersion := sys.env.getOrElse("SCALA_VERSION", "2.12.12"),
   dependencyOverrides += "org.scala-lang" % "scala-compiler" % scalaVersion.value,
   // scalastyleFailOnError := true,
   runScalaStyle := {
-    org.scalastyle.sbt.ScalastylePlugin.scalastyle.in(Compile).toTask("").value
+    (Compile / scalastyle).toTask("").value
   },
-  (compile in Compile) <<= (compile in Compile) dependsOn runScalaStyle,
+  (Compile / compile) := (Compile / compile).dependsOn(runScalaStyle).value,
 
   // In Scala 2.10, certain language features are disabled by default, such as implicit conversions.
   // Need to pass in language options or import scala.language.* to enable them.
@@ -264,8 +250,8 @@ lazy val commonSettings = Defaults.coreDefaultSettings ++ dirSettings ++ implici
   scalacOptions ++= Seq("-Xmax-classfile-name", "128"),
   resolvers ++= Dependencies.repos,
   libraryDependencies ++= apiDeps,
-  parallelExecution in Test := false,
-  testOptions in Test += Tests.Argument(TestFrameworks.ScalaTest, "-oDF"),
+  Test / parallelExecution := false,
+  Test / testOptions += Tests.Argument(TestFrameworks.ScalaTest, "-oDF"),
   // We need to exclude jms/jmxtools/etc because it causes undecipherable SBT errors  :(
   ivyXML :=
     <dependencies>
@@ -282,7 +268,8 @@ lazy val scoverageSettings = {
 
 lazy val publishSettings = Seq(
   licenses += ("Apache-2.0", url("http://choosealicense.com/licenses/apache/")),
-  bintrayOrganization := Some("spark-jobserver")
+  publishTo := Some("Artifactory Realm" at "https://sparkjobserver.jfrog.io/artifactory/jobserver"),
+  credentials += Credentials("Artifactory Realm", "sparkjobserver.jfrog.io", System.getenv("JFROG_USERNAME"), System.getenv("JFROG_PASSWORD"))
 )
 
 // This is here so we can easily switch back to Logback when Spark fixes its log4j dependency.
